--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "fs": "^0.0.1-security",
+    "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "node-fetch": "^3.3.2"
   }
